--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -237,6 +237,7 @@ BITCOIN_CORE_H = \
   shutdown.h \
   signet.h \
   streams.h \
+  support/allocators/node_pool_resource.h \
   support/allocators/secure.h \
   support/allocators/zeroafterfree.h \
   support/cleanse.h \
